--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -136,3 +136,18 @@ select.input-field {
     background-size: 12px;
     padding-right: 30px; /* Spazio per l'icona */
   }
+
+
+@media (max-width: 768px) {
+    .login-box {
+        position: absolute;
+        background-color: rgba(64, 111, 187, 0.311); 
+        padding: 30px 30px;
+        border-radius: 0px;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    }
+}
