--- a/src/styles/mappa.css
+++ b/src/styles/mappa.css
@@ -417,16 +417,142 @@ h1 {
 }
 
 @media (max-width: 768px) {
-    .left
-    {
-        display: none;
+    #filtroVisualizza {
+        z-index: 999;
+        height: 60px;
+        width: 60px;
+        position: fixed;
+        top: 120px;
+        left: 20px;
+        background-color: #000000;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.9);
+        border-radius: 50%;
+        background-size: cover; 
+        background-position: center; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+
+    .filter-window {
+        border-radius: 8px;
+        width: 250px;
+        z-index: 100;
+        top: 50px;
+        left: 35px;
+        max-height: 400px;
+        overflow-y: auto;
+    }
+    
+
+    .floatingPostMobilePost {
+        position: fixed;
+        bottom: 90px;
+        right: 20px;
+        width: 60px;
+        height: 60px;
+        background-color: #000000;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        font-weight: bold;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.9);
+        z-index: 999;
+        display: flex;
+        border: 0px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+
+    .floatingPostMobileParty {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 60px;
+        height: 60px;
+        background-color: #000000;
+        border-radius: 50%;
+        border: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        font-weight: bold;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.9);
+        z-index: 999;
+        display: flex;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+
+    .floatingPostMobileEvento {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 60px;
+        height: 60px;
+        background-color: #000000;
+        border-radius: 50%;
+        border: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        font-weight: bold;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.9);
+        z-index: 999;
+        display: flex;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+    
+    .floatingPostMobilePost img
+    {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+    }
+    
+    .floatingPostMobileParty img
+    {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+    }
+
+    .floatingPostMobileEvento img
+    {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+    }
+
+    .loading-overlay {
+      
+        height: calc(100% - 100px);
+
+      }
+
+
+    #filtroVisualizza img
+    {
+        margin: 0px;
+        object-fit: contain;
+    }
+
+    .right {
+        height: calc(100% - 100px);
+    }
+    
     .right
     {
         width: 100%;
     }
     #map
     {
+        height: calc(100% - 100px);
         width: 100%;
     }
 }
