--- a/src/styles/mappa.css
+++ b/src/styles/mappa.css
@@ -440,7 +440,7 @@ h1 {
         height: 0px;
         background-color: rgba(15, 31, 58, 0);
         border-radius: 0px;
-        box-shadow: 0px;
+        box-shadow: 0px 0px 0px 0px;
         padding: 20px;
     }
 
