--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,22 @@ body {
   color: white;
 }
 
+
+.contenitoreGenerale {
+  position: absolute;
+  height: calc(100% - 120px); /* Altezza responsiva con spazio per la navbar */
+  width: 100%;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .contenitoreGenerale {
+      height: calc(100% - 100px); /* Altezza responsiva con spazio per la navbar */
+  }
+}
+
