--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -4,7 +4,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(64, 111, 187, 0.311); 
+    background-color: rgba(64, 111, 187, 0.311);
     padding: 40px 30px;
     border-radius: 55px;
     text-align: center;
@@ -12,22 +12,24 @@
     overflow-y: auto;
     max-height: 80%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-    
+
 }
 
 .login-box::-webkit-scrollbar {
-    width: 10px; 
-  }
-  .login-box::-webkit-scrollbar-thumb {
+    width: 10px;
+}
+
+.login-box::-webkit-scrollbar-thumb {
     background-color: #161d1a67;
     border-radius: 10px;
-    border: 2px solid #ffffff; 
+    border: 2px solid #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
-  .login-box::-webkit-scrollbar-track {
+}
+
+.login-box::-webkit-scrollbar-track {
     background: #00000017;
     border-radius: 10px;
-  }
+}
 
 .small-text {
     font-size: 16px;
@@ -52,7 +54,7 @@
 .sub-text {
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
-    font-weight:bold;
+    font-weight: bold;
     color: #ffffff;
     margin-bottom: 30px;
 }
@@ -93,21 +95,21 @@
 }
 
 .access {
-    background-color: #36d598; 
+    background-color: #36d598;
     color: white;
 }
 
 .access:hover {
-    background-color: #0097a7; 
+    background-color: #0097a7;
 }
 
 .register {
-    background-color: #36d598; 
+    background-color: #36d598;
     color: white;
 }
 
 .register:hover {
-    background-color: #0097a7; 
+    background-color: #0097a7;
 }
 
 /* Google Icon */
@@ -122,7 +124,8 @@
 }
 
 .google-icon:hover {
-    transform: scale(1.1); /* Ingrandisce leggermente al passaggio del mouse */
+    transform: scale(1.1);
+    /* Ingrandisce leggermente al passaggio del mouse */
 }
 
 
@@ -130,18 +133,54 @@
 select.input-field {
     appearance: none;
     color: white;
-    background-image: url('https://cdn.icon-icons.com/icons2/1369/PNG/512/-arrow-downward_90206.png'); /* Icona freccia */
+    background-image: url('https://cdn.icon-icons.com/icons2/1369/PNG/512/-arrow-downward_90206.png');
+    /* Icona freccia */
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 12px;
-    padding-right: 30px; /* Spazio per l'icona */
-  }
+    padding-right: 30px;
+    /* Spazio per l'icona */
+}
 
+.profile-picture-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
 
-@media (max-width: 994px) {
+.profile-picture-label {
+    cursor: pointer;
+    color: black;
+}
+
+.profile-picture-circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    overflow: hidden;
+    position: relative;
+}
+
+.profile-picture-circle img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profile-picture-input {
+    display: none;
+}
+
+@media (max-width: 768px) {
     .login-box {
         position: absolute;
-        background-color: rgba(64, 111, 187, 0.311); 
+        background-color: rgba(64, 111, 187, 0.311);
         padding: 30px 30px;
         border-radius: 0px;
         text-align: center;
