--- a/src/styles/mappa.css
+++ b/src/styles/mappa.css
@@ -102,9 +102,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 2%;
+    position: relative;  /* Aggiungi questa riga per il posizionamento relativo */
 }
-
-
 
 .sidebar .card-img-top {
     width: 60px;
@@ -114,6 +113,15 @@
     margin-right: 15px;
 }
 
+.sidebar .higIcon {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    margin-right: 15px;
+    z-index: 9999;
+    position: absolute; 
+    right: 0; 
+}
 
 .sidebar .card-body {
     display: flex;
