--- a/src/styles/viewPartyEvento.css
+++ b/src/styles/viewPartyEvento.css
@@ -23,7 +23,7 @@
     width: 90%;
     max-width: 500px;
     background: #ffffff;
-    border: 1px solid #f2f2f2;
+    border: 0px solid #f2f2f2;
     border-radius: 10px;
     padding: 0;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -62,18 +62,21 @@
 #popupPartyDiv .instagram-card-header div {
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
+ 
 }
 
 #popupPartyDiv .instagram-card-user-name {
     font-weight: bold;
     color: #262626;
     font-size: 18px;
+    margin-left: 15px;
 }
 
 #popupPartyDiv .instagram-card-time {
-    color: #999;
-    font-size: 14px;
+    font-weight: bold;
+    color: #5b1f1f;
+    font-size: 15px;
+    margin-bottom: 10px;
 }
 
 #popupPartyDiv .instagram-card-image {
@@ -85,7 +88,7 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-bottom: 1px solid #f2f2f2;
+
 }
 
 #popupPartyDiv .instagram-card-content {
@@ -100,7 +103,7 @@
 }
 
 #popupPartyDiv .categorie {
-    margin: 10px 0;
+    margin: 10px -0px;
     color: #666;
     font-size: 14px;
     display: flex;
