--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,8 @@
 /* Navbar Styles */
 /* Navbar */
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
+
 .navbar {
     display: flex;
     align-items: center;
