--- a/src/styles/viewPartyEvento.css
+++ b/src/styles/viewPartyEvento.css
@@ -157,7 +157,8 @@
     overflow-y: auto;
     margin-bottom: 10px;
     padding-right: 10px; 
-    margin: 10px;
+    
+    margin-left: 20px;
 }
 
 
